# STL-AEP

./: .gitignore  README.md  install.md
pigain/: CMakeLists.txt  package.xml
pigain/config/: config.yaml
pigain/include/pigain/: gp.h  pig.h
pigain/launch/: pig.launch
pigain/nodes/: pig.py
pigain/src/: gp.cpp  pig.cpp  pig_node.cpp
stl_aep/: CMakeLists.txt  package.xml
stl_aeplanner/: CMakeLists.txt  nodelet_plugins.xml  package.xml
stl_aeplanner/cfg/: LTL.cfg  STL.cfg
stl_aeplanner/include/aeplanner/: aeplanner.h  aeplanner_viz.h  data_structures.h  gp.h
stl_aeplanner/include/stl_aeplanner/: data_structures.h  gp.h  param.h  stl_aeplanner.h  stl_aeplanner_nodelet.h  stl_aeplanner_viz.h
stl_aeplanner/launch/: stl_aeplanner_nodelet.launch  stl_aeplanner_standalone.launch
stl_aeplanner/src/: aeplanner.cpp  aeplanner_viz.cpp  gp.cpp  param.cpp  stl_aeplanner.cpp  stl_aeplanner_node.cpp  stl_aeplanner_nodelet.cpp  stl_aeplanner_viz.cpp
stl_aeplanner_msgs/: CMakeLists.txt  package.xml
stl_aeplanner_msgs/msg/: LTLStats.msg
stl_evaluation/: CMakeLists.txt  package.xml
stl_evaluation/src/: stl_evaluation_node.cpp
stl_exploration/: CMakeLists.txt  package.xml
stl_exploration/config/: exploration.yaml
stl_exploration/config/aep_apartment/: aep.yaml  stl.yaml
stl_exploration/config/aep_office/: aep.yaml  aep_real_bbx.yaml  stl.yaml
stl_exploration/config/empty_room_big/: aep.yaml  stl.yaml
stl_exploration/config/garage/: aep.yaml  aep_real_bbx.yaml  stl.yaml  stl_routers.yaml
stl_exploration/config/office/: aep.yaml  aep_real_bbx.yaml  stl.yaml
stl_exploration/config/power_plant/: aep.yaml  stl.yaml
stl_exploration/config/real_world/: aep.yaml  stl.yaml
stl_exploration/launch/: exploration.launch  fly_to.launch  octomap_server.launch  real_world.launch  realsense.launch
stl_exploration/nodes/: fly_to_republishing.py  image_maxing.py
stl_exploration/src/: fly_to.cpp  stl_exploration.cpp
stl_frontier_planner/: CMakeLists.txt  package.xml
stl_frontier_planner/cfg/: STL.cfg
stl_frontier_planner/include/stl_frontier_planner/: rrt_node.h  stl_frontier_planner.h
stl_frontier_planner/launch/: stl_frontier_planner.launch
stl_frontier_planner/src/: stl_frontier_planner.cpp  stl_frontier_planner_node.cpp
stl_frontier_planner/src/stl_frontier_planner/: rrt_node.cpp
