<?xml version="1.0"?>
<package>
  <name>stl_aeplanner</name>
  <version>1.0.0</version>
  <description>The Autonomous Exploration Planner package</description>

  <maintainer email="magse761@student.liu.se">Magnus Selin</maintainer>

  <license>TODO</license>

  <author>Magnus Selin</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>stl_aeplanner_msgs</build_depend>
  <build_depend>dd_gazebo_plugins</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  
  <run_depend>stl_aeplanner_msgs</run_depend>
  <run_depend>dd_gazebo_plugins</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
